--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,3 @@
 spring.application.name=api
-
-spring.datasource.url=jdbc:mysql://localhost:3306/terranovaApi
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
 server.port=8080
-
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
+spring.profiles.active=dev
