--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,5 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.security=DEBUG
+
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
